# SEDA-Paletrone

./: README.md
FAC_MAV_paletrone/FAC_MAV/: CMakeLists.txt
FAC_MAV_paletrone/FAC_MAV/launch/: .FAC_MAV_launcher.launch.swp  FAC_MAV_launcher.launch  FAC_MAV_with_ARM.launch  FAC_MAV_with_opti.launch  FAC_MAV_with_opti.launch.save
FAC_MAV_paletrone/FAC_MAV/src/: .FAC_MAV_D_ctrler.cpp.swp  .FAC_MAV_ctrler.cpp.swl  .FAC_MAV_ctrler.cpp.swm  .FAC_MAV_ctrler.cpp.swn  .FAC_MAV_ctrler.cpp.swo  FAC_MAV_D_ctrler.cpp  FAC_MAV_ctrler.cpp
FAC_MAV_paletrone/data_logging/: CMakeLists.txt
FAC_MAV_paletrone/data_logging/src/: data_logging.cpp
FAC_MAV_paletrone/dynamixel-workbench/dynamixel_workbench_controllers/launch/: position_control.launch
FAC_MAV_paletrone/dynamixel-workbench/dynamixel_workbench_controllers/src/: position_control.cpp
FAC_MAV_paletrone/external_wrench_nmhe/src/: external_wrench_estimator.cpp
FAC_MAV_paletrone/microstrain_inertial/microstrain_inertial_rqt/microstrain_inertial_rqt_common/: README.md  plugin.xml
FAC_MAV_paletrone/ros-pwm-pca9685/pwm_pca9685/src/: pca9685_activity.cpp
FAC_MAV_paletrone/sbus_t4/: sbus_t4.ino
FAC_MAV_paletrone/setting_tf2/src/: setting_t4_tf.cpp  setting_world_tf.cpp
arduino/sketch_jul02a/: sketch_jul02a.ino
data_logging/: CMakeLists.txt  package.xml
data_logging/bag/: 17-42_S2_OnlySEDA.bag  19-36_S2_AdmitYK7.bag  19-53_S2_AdmitY53.bag  20240723_OnlySEA_SemiGimbaling.bag  _2024-07-23-15-21-19.bag  _2024-07-23-15-24-26.bag  _2024-07-23-15-36-48.bag  _2024-07-23-15-39-29.bag  _2024-07-23-16-00-56.bag  _2024-07-23-16-01-45.bag  _2024-07-23-16-04-05.bag  _2024-07-23-16-05-57.bag  _2024-07-23-16-07-40.bag  _2024-07-26-11-03-52.bag  updownsine.bag
data_logging/src/: inch_data_logging.cpp  logging.cpp
dynamixel-workbench/dynamixel_workbench_controllers/: CMakeLists.txt
dynamixel-workbench/dynamixel_workbench_controllers/launch/: position_control.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: current_limit.cpp  multi_port.cpp  position_control.cpp
dynamixel-workbench/dynamixel_workbench_toolbox/src/dynamixel_workbench_toolbox/: dynamixel_tool.cpp
gazebo_simulation/: CMakeLists.txt
gazebo_simulation/launch/: view_robot.launch
inch/FAC_MAV/src/: FAC_MAV_ctrler.cpp
inch/dasom_description/launch/: dasom_manipulator.launch
inch/data_logging/: CMakeLists.txt
inch/data_logging/bag/1-1/: Apisat_1_1stSEA.m  Apisat_1_1stSEDA.m
inch/data_logging/bag/1-2/: 1st2Rigid-14-14.bag  Apisat_1_2Plot.m  Apisat_1_2Rigid.m  Apisat_1_2SEDA.m
inch/data_logging/bag/2/: Apisat_2ndRigid.m  Apisat_2ndSEDA.m
inch/data_logging/bag/misc/: 20240723_Rigid_HoverDistGimbal.bag  20240723_SEDAAdmit_HoverDistGimbal.bag  Apisat_1_2Rigid.asv  Apisat_1_2SEDA.asv  Apisat_2ndPlot.asv  Apisat_2ndSEDA.asv
inch/dynamixel-workbench/dynamixel_workbench_controllers/src/: position_control.cpp  reboot.cpp
inch/gazebo_simulation/urdf/: test_robot.urdf
inch/inch_controllers/: CMakeLists.txt
inch/inch_controllers/config/: parameters.yaml
inch/inch_controllers/include/inch_controllers/: inch_manipulator_control.h
inch/inch_controllers/launch/: inch_launch.launch  inch_launch_Test.launch  inch_manipulator_launch.launch
inch/inch_controllers/srv/: FextYFilter.srv  admittance.srv
inch/inch_tf/: package.xml
inch/inch_tf/include/: inch_tf2_broadcaster.h
inch/inch_tf/src/: inch_tf2_listener.cpp
inch/inch_toolbox/: CMakeLists.txt
inch/inch_toolbox/src/: inch_joint.cpp  inch_misc.cpp  inch_workbench.cpp
inch/optitrack/launch/: optitrack.launch
inch/rqt_mypkg/ui/: my_plugin.ui
inch_controller/: CMakeLists.txt  package.xml
inch_controllers/: CMakeLists.txt  package.xml
inch_controllers/config/: link.yaml  parameters.yaml
inch_controllers/include/inch_controllers/: inch_manipulator_control.h
inch_controllers/launch/: inch_arduino.launch  inch_encoder.launch  inch_gimbalTrying.launch  inch_launch.launch  inch_launch_Test.launch  inch_manipulator_control (copy).launch  inch_manipulator_control.launch  inch_tf.launch
inch_controllers/src/: inch_manipulator_control.cpp
inch_lab/: CMakeLists.txt  package.xml
inch_lab/src/: admittance_1Link.cpp  admittance_2Link.cpp  preparing_mpc (copy).cpp  preparing_mpc.cpp  trajectory_generator.cpp
inch_lab/srv/: CMakeLists.txt  admittanceSRV.srv  circleSRV.srv
inch_tf/: CMakeLists.txt
inch_tf/bag/: 2024-07-08-14-22-32.bag  disturbance yz plane.bag  disturbanceAll.bag  updownfrontback.bag
inch_tf/include/: inch_tf2_broadcaster.h
inch_tf/launch/: inch_tf2_setting.launch
inch_tf/src/: inch_tf2_broadcaster.cpp  inch_tf2_listener.cpp
inch_toolbox/: CMakeLists.txt  package.xml
inch_toolbox/include/inch_toolbox/: inch_joint.h  inch_misc.h  inch_workbench.h
inch_toolbox/src/: inch_joint.cpp  inch_misc.cpp  inch_workbench.cpp
inch_worm/FAC_MAV/: CMakeLists.txt
inch_worm/data_logging/bag/1-1/: 1st1SEA_2024-07-26-19-11-42.bag  2ndSEDA1_2024-07-26-13-41-16.bag  Apisat_1_1Plot.m  SEDAImpulse2.bag
inch_worm/data_logging/bag/1-2/: 1stSEDA_2024-07-26-13-17-04.bag
inch_worm/gazebo_simulation/: package.xml
inch_worm/inch_controllers/src/: inch_manipulator_control.cpp
inch_worm/inch_tf/: CMakeLists.txt
inch_worm/inch_tf/launch/: inch_tf2_setting.launch
inch_worm/inch_tf/src/: inch_tf2_listener_global_cmd.cpp  inch_tf2_listener_global_meas.cpp  inch_tf2_listener_global_ref.cpp
inch_worm/osqp/src/: solver.py
inch_worm/rqt_mypkg/: CMakeLists.txt  plugin.xml
model_analysis/: SEA_system.m  SEA_system.slx  SEA_system.slx.original  SEA_system.slxc  SEA_system_MPC_PID.slx  robot_arm.asv  robot_arm.m
optitrack/launch/: optitrack.launch
optitrack/src/: optitrack.cpp
osqp/: CMakeLists.txt  package.xml
rqt_mypkg/: CMakeLists.txt
rqt_mypkg/include/: my_plugin.h
rqt_mypkg/src/: my_plugin.cpp
rqt_mypkg/srv/: FextFilter.srv  FextYFilter.srv
rqt_mypkg/ui/: my_plugin.ui
setting_tf2/: CMakeLists.txt
setting_tf2/launch/: tf2_setting.launch
setting_tf2/src/: link_1_listener.cpp  link_2_listener.cpp  setting_Link_tf.cpp
(+51 files in other folders)
